final commit wed aug 8 before sleeping

--- a/css/main-demo.css
+++ b/css/main-demo.css
@@ -25,7 +25,18 @@ h1 {
     height: 3500px;
 }
 
+.greeting-container {
+    z-index: 2;
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 50%;
+}
+
 #firstpart-greeting {
-    top: 0;
+    width: inherit;
+    padding: auto;
+    text-align: center;
+    margin: auto;
     opacity: 0;
 }
