commit before pulling

--- a/css/main-demo.css
+++ b/css/main-demo.css
@@ -11,5 +11,5 @@ h1 {
     color: white;
 }
 #sketch-holder {
-    background-color: rgba(0,0,0,.55);
+    background: linear-gradient(rgba(0,0,0,.3), black);
 }
