--- a/css/main-demo.css
+++ b/css/main-demo.css
@@ -1,3 +1,6 @@
+/* Google-Fonts: font-family: 'Dancing Script', cursive; */
+/*font-family: 'Dancing Script', cursive;
+font-family: 'Satisfy', cursive;*/
 body {
     width: 100vw;
     margin:0;
@@ -73,3 +76,17 @@ h1 {
     background-color: rgba(0,100,0,.5);
 }
 
+.faded {
+    display: none;
+    opacity: 0;
+    text-align: center;
+    color: white;
+    font-size: 4em;
+}
+
+#firstpart-text-container {
+    padding: 60px;
+    height: inherit;
+    font-family: 'Dancing Script', cursive;
+    font-family: 'Satisfy', cursive;
+}
