--- a/css/main-demo.css
+++ b/css/main-demo.css
@@ -45,7 +45,7 @@ h1 {
     opacity: 0;
 }
 .main-container {
-    height: 3500px;
+    height: 500vh;
 }
 
 .greeting-container {
@@ -169,10 +169,17 @@ html body [data-ca3_iconfont="ETmodules"]::before {
 
 /*gravity points*/
 #gravitypoint-sketch-holder {
+    z-index: 1;
     width: 100vw;
     height: 100vh;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(200,200,0,.3);
+    background-color: rgba(0,0,0,1);
+}
+.heart {
+    background-image: url('../assets/3d-beatingheart.gif');
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position-x: 50%;
+    height: 100vh;
+    width: 100%;
+    opacity: 1;
 }
