finished first part

--- a/css/main-demo.css
+++ b/css/main-demo.css
@@ -16,6 +16,10 @@ h1 {
     color: white;
 }
 
+.space-div {
+    font-family: 'Caveat', cursive;
+}
+
 .starry-sky {
     top: 0;
     width: 100%;
