--- a/css/main.css
+++ b/css/main.css
@@ -203,6 +203,8 @@ html body [data-ca3_iconfont="ETmodules"]::before {
 }
 
 #fourthPartDiv > div {
+    width: 100vw;
+    height: 100%;
     font-family: 'Caveat', cursive;
     padding: 10%;
     text-shadow: 0px 10px 15px black, 0 0 25px blue, 0 0 5px darkblue;
