--- a/css/main.css
+++ b/css/main.css
@@ -203,7 +203,6 @@ html body [data-ca3_iconfont="ETmodules"]::before {
 }
 
 #fourthPartDiv > div {
-    width: 100vw;
     height: 100%;
     font-family: 'Caveat', cursive;
     padding: 10%;
@@ -247,5 +246,9 @@ html body [data-ca3_iconfont="ETmodules"]::before {
     position: fixed;
     background: transparent;
     height: 100vh;
+    width: 100vw;
+}
+
+#fourthPartDiv {
     width: 100vw;
 }
